--- a/style.css
+++ b/style.css
@@ -1,3 +1,114 @@
+*,
+*::after,
+*::before {
+  margin: 0;
+  padding: 0;
+}
 
+a {
+  text-decoration: none;
+}
 
+body {
+  margin: 0 auto;
+  background: #f5fafe;
+  font-family: "Mulish";
+  color: #333333;
+}
+
+body header {
+  background: #fff;
+}
+
+body .wrapper {
+  margin: 0 auto;
+  padding: 0 70px;
+}
+
+.first-line {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  min-height: 67px;
+  padding: 30px 0;
+}
+
+.first-line .title {
+  font-family: "Luckiest Guy", cursive;
+  font-size: 24px;
+  text-transform: uppercase;
+}
+
+.first-line .title a {
+  color: #333333;
+}
+
+.first-line .search-button {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: nowrap;
+      flex-wrap: nowrap;
+  height: 50px;
+  width: 50%;
+}
+
+.first-line .search-button input {
+  background-color: #f8f8f8;
+  border: none;
+  width: 100%;
+  min-width: 200px;
+  padding-left: 30px;
+  color: #333333;
+}
+
+.first-line .search-button button {
+  min-width: 80px;
+  background: #ffb800;
+  border: none;
+  cursor: pointer;
+}
+
+.menu {
+  background-color: #065a46;
+  height: 80px;
+}
+
+.menu ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  padding-top: 25px;
+}
+
+.menu ul a {
+  color: #fff;
+}
+
+.menu ul a:hover {
+  color: #ffb800;
+}
+
+.menu ul .active {
+  color: #ffb800;
+}
+
+.menu ul li {
+  font-weight: bold;
+  font-size: 15px;
+  line-height: 25px;
+  text-transform: uppercase;
+  list-style: none;
+}
 /*# sourceMappingURL=style.css.map */
