--- a/style.css
+++ b/style.css
@@ -246,4 +246,38 @@ body .wrapper {
   line-height: 35px;
   margin-bottom: 47px;
 }
+
+@media screen and (max-width: 880px) {
+  .recipe-info {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .recipe-info .recipe-img {
+    margin: 0 0 30px 0;
+  }
+  .recipe-structure {
+    padding-top: 0;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .first-line {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: start;
+  }
+  .first-line h1 {
+    margin-bottom: 10px;
+  }
+  .menu-links {
+    display: none;
+  }
+}
 /*# sourceMappingURL=style.css.map */
