--- a/style.scss
+++ b/style.scss
@@ -103,3 +103,120 @@ body {
         }
     }
 }
+
+// like info
+.content {
+    position: relative;
+}
+.like-wrapper {
+    position: fixed;
+    width: 300px;
+    height: 370px;
+    top: 207px;
+    right: 0;
+    background-color: #f6f6f6;
+    transform: translateX(100%);
+    transition: 0.2s;
+    .close-btn,
+    .delete {
+        background: none;
+        border: none;
+    }
+}
+.active {
+    transform: translateX(0);
+}
+
+// content style
+.meal {
+    .recipe-header {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        .recipe-title {
+            @extend %title;
+            margin: 30px 0;
+            text-align: center;
+        }
+        .recipe-btn {
+            display: flex;
+            width: 100%;
+            justify-content: center;
+            flex-wrap: wrap;
+            margin-bottom: 40px;
+            .get-recipe {
+                @extend %btn;
+                width: 270px;
+                height: 60px;
+                margin-right: 50px;
+            }
+            .star {
+                width: 50px;
+                height: 50px;
+                background: none;
+                border: none;
+                cursor: pointer;
+            }
+        }
+    }
+}
+.recipe-info {
+    display: flex;
+    margin-top: 30px;
+    .recipe-img {
+        margin: 0 110px 30px 0;
+        img {
+            width: 400px;
+            height: 400px;
+            border-radius: 5px;
+        }
+    }
+}
+.recipe-structure {
+    width: 50%;
+    h2 {
+        font-weight: 800;
+        font-size: 40px;
+        margin-bottom: 20px;
+    }
+    p {
+        font-size: 20px;
+    }
+}
+.recipe-desc {
+    margin-top: 45px;
+    .desc-title {
+        @extend %title;
+        margin-bottom: 30px;
+    }
+    .desc {
+        font-size: 20px;
+        line-height: 35px;
+        margin-bottom: 47px;
+    }
+}
+@media screen and (max-width: 880px) {
+    .recipe-info {
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+    .recipe-info .recipe-img {
+        margin: 0 0 30px 0;
+    }
+    .recipe-structure {
+        padding-top: 0;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .first-line {
+        flex-direction: column;
+        align-items: start;
+        h1 {
+            margin-bottom: 10px;
+        }
+    }
+    .menu-links {
+        display: none;
+    }
+}
