--- a/style.css
+++ b/style.css
@@ -99,7 +99,7 @@ body .wrapper {
   height: 80px;
 }
 
-.menu ul {
+.menu .menu-link {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -109,24 +109,122 @@ body .wrapper {
   padding-top: 25px;
 }
 
-.menu ul a {
+.menu .menu-link a {
   color: #fff;
 }
 
-.menu ul a:hover {
+.menu .menu-link a:hover {
   color: #ffb800;
 }
 
-.menu ul .active {
+.menu .menu-link .active {
   color: #ffb800;
 }
 
-.menu ul li {
+.menu .menu-link li {
   font-weight: bold;
   font-size: 15px;
   line-height: 25px;
   text-transform: uppercase;
   list-style: none;
+}
+
+.burger-wrapp {
+  display: none;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  padding-top: 25px;
+}
+
+.header-burger {
+  width: 30px;
+  height: 22px;
+  position: relative;
+  display: none;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+}
+
+.header-burger .burger-line {
+  display: block;
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  background-color: #ffb800;
+  left: 0;
+}
+
+.header-burger .burger-line_first {
+  top: 0;
+}
+
+.header-burger .burger-line_second {
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+}
+
+.header-burger .burger-line_third {
+  bottom: 0;
+}
+
+.burger-wrapper-slide {
+  position: relative;
+}
+
+.burger-slide-wrapp {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: reverse;
+      -ms-flex-direction: row-reverse;
+          flex-direction: row-reverse;
+  position: fixed;
+  top: 0;
+  right: 0;
+  width: 60%;
+  height: 100%;
+  background: #f6f6f6;
+  -webkit-transform: translateX(100%);
+          transform: translateX(100%);
+  -webkit-transition: 0.2s;
+  transition: 0.2s;
+}
+
+.burger-slide-wrapp .burger-nav {
+  padding: 20px 30px 0 0;
+}
+
+.burger-slide-wrapp .burger-nav .close {
+  margin-bottom: 30px;
+}
+
+.burger-slide-wrapp .burger-menu-link {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  list-style: none;
+}
+
+.burger-slide-wrapp .burger-menu-link a {
+  color: #333333;
+  font-size: 30px;
+  text-transform: uppercase;
+}
+
+.burger-slide-wrapp .burger-menu-link a:hover {
+  color: #ffb800;
+}
+
+.burger-slide-wrapp .burger-menu-link li {
+  margin-bottom: 10px;
 }
 
 .content {
@@ -140,14 +238,11 @@ body .wrapper {
   top: 207px;
   right: 0;
   background-color: #f6f6f6;
+  padding: 5px;
   -webkit-transform: translateX(100%);
           transform: translateX(100%);
   -webkit-transition: 0.2s;
   transition: 0.2s;
-}
-
-.like-wrapper h2 {
-  font-size: 20px;
 }
 
 .like-wrapper .close-btn,
@@ -156,9 +251,26 @@ body .wrapper {
   border: none;
 }
 
+.like-wrapper .fav-img img {
+  width: 50px;
+  height: 50px;
+  margin: 5px;
+}
+
+.like-wrapper .fav-name {
+  font-size: 20px;
+}
+
+.fav-wrapper-small {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
 .active {
   -webkit-transform: translateX(0);
           transform: translateX(0);
+  z-index: 99;
 }
 
 .meal .recipe-header {
@@ -282,6 +394,24 @@ body .wrapper {
   }
   .menu-links {
     display: none;
+  }
+  .header-burger {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+  .recipe-structure h2 {
+    font-size: 30px;
+  }
+  .recipe-desc .desc-title {
+    font-size: 25px;
+    margin-bottom: 5px;
+  }
+  .burger-wrapp,
+  .header-burger {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
   }
 }
 /*# sourceMappingURL=style.css.map */
