--- a/style.css
+++ b/style.css
@@ -152,7 +152,7 @@ body .wrapper {
   position: absolute;
   width: 100%;
   height: 2px;
-  background-color: #ffb800;
+  background-color: #fff;
   left: 0;
 }
 
@@ -187,7 +187,7 @@ body .wrapper {
   right: 0;
   width: 60%;
   height: 100%;
-  background: #f6f6f6;
+  background: #065a46;
   -webkit-transform: translateX(100%);
           transform: translateX(100%);
   -webkit-transition: 0.2s;
@@ -195,10 +195,19 @@ body .wrapper {
 }
 
 .burger-slide-wrapp .burger-nav {
-  padding: 20px 30px 0 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -webkit-box-align: baseline;
+      -ms-flex-align: baseline;
+          align-items: baseline;
+  padding: 50px 30px 0 0;
 }
 
-.burger-slide-wrapp .burger-nav .close {
+.burger-slide-wrapp .burger-nav img {
   margin-bottom: 30px;
 }
 
@@ -214,7 +223,7 @@ body .wrapper {
 }
 
 .burger-slide-wrapp .burger-menu-link a {
-  color: #333333;
+  color: #fff;
   font-size: 30px;
   text-transform: uppercase;
 }
@@ -235,7 +244,7 @@ body .wrapper {
   position: fixed;
   width: 300px;
   height: 370px;
-  top: 207px;
+  top: 0;
   right: 0;
   background-color: #f6f6f6;
   padding: 5px;
@@ -407,8 +416,7 @@ body .wrapper {
     font-size: 25px;
     margin-bottom: 5px;
   }
-  .burger-wrapp,
-  .header-burger {
+  .burger-wrapp {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
