--- a/style.scss
+++ b/style.scss
@@ -119,7 +119,7 @@ body {
         position: absolute;
         width: 100%;
         height: 2px;
-        background-color: $orange;
+        background-color: #fff;
         left: 0;
     }
     .burger-line_first {
@@ -146,12 +146,16 @@ body {
     right: 0;
     width: 60%;
     height: 100%;
-    background: #f6f6f6;
+    background: #065a46;
     transform: translateX(100%);
     transition: 0.2s;
     .burger-nav {
-        padding: 20px 30px 0 0;
-        .close {
+        display: flex;
+        width: 100%;
+        justify-content: space-around;
+        align-items: baseline;
+        padding: 50px 30px 0 0;
+        img {
             margin-bottom: 30px;
         }
     }
@@ -160,7 +164,7 @@ body {
         flex-direction: column;
         list-style: none;
         a {
-            color: #333333;
+            color: #fff;
             font-size: 30px;
             text-transform: uppercase;
             &:hover {
@@ -181,7 +185,7 @@ body {
     position: fixed;
     width: 300px;
     height: 370px;
-    top: 207px;
+    top: 0;
     right: 0;
     background-color: #f6f6f6;
     padding: 5px;
@@ -313,8 +317,7 @@ body {
         font-size: 25px;
         margin-bottom: 5px;
     }
-    .burger-wrapp,
-    .header-burger {
+    .burger-wrapp {
         display: flex;
     }
 }
