--- a/style.css
+++ b/style.css
@@ -242,22 +242,25 @@ body .wrapper {
 
 .like-wrapper {
   position: fixed;
-  width: 300px;
-  height: 370px;
+  width: 400px;
+  height: 350px;
   top: 0;
   right: 0;
-  background-color: #f6f6f6;
+  background-color: #fff;
   padding: 5px;
   -webkit-transform: translateX(100%);
           transform: translateX(100%);
   -webkit-transition: 0.2s;
   transition: 0.2s;
+  overflow-y: auto;
 }
 
 .like-wrapper .close-btn,
 .like-wrapper .delete {
   background: none;
   border: none;
+  width: 15px;
+  height: 15px;
 }
 
 .like-wrapper .fav-img img {
@@ -270,10 +273,28 @@ body .wrapper {
   font-size: 20px;
 }
 
+.like-info {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: reverse;
+      -ms-flex-direction: row-reverse;
+          flex-direction: row-reverse;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin-bottom: 5px;
+}
+
 .fav-wrapper-small {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 
 .active {
