--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@ body header {
 
 body .wrapper {
   margin: 0 auto;
-  padding: 0 70px;
+  padding: 0 5%;
 }
 
 .first-line {
@@ -242,7 +242,7 @@ body .wrapper {
 
 .like-wrapper {
   position: fixed;
-  width: 400px;
+  width: 40%;
   height: 350px;
   top: 0;
   right: 0;
@@ -441,6 +441,20 @@ body .wrapper {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
+  }
+  .like-wrapper {
+    width: 80%;
+  }
+}
+
+@media screen and (max-width: 425px) {
+  .meal .recipe-header .recipe-btn .get-recipe {
+    margin-right: 0;
+  }
+  .recipe-info .recipe-img img {
+    width: 250px;
+    height: 250px;
+    border-radius: 5px;
   }
 }
 /*# sourceMappingURL=style.css.map */
