--- a/style.scss
+++ b/style.scss
@@ -35,7 +35,7 @@ body {
     }
     .wrapper {
         margin: 0 auto;
-        padding: 0 70px;
+        padding: 0 5%;
     }
 }
 
@@ -183,7 +183,7 @@ body {
 }
 .like-wrapper {
     position: fixed;
-    width: 400px;
+    width: 40%;
     height: 350px;
     top: 0;
     right: 0;
@@ -329,5 +329,18 @@ body {
     }
     .burger-wrapp {
         display: flex;
+    }
+    .like-wrapper {
+        width: 80%;
+    }
+}
+@media screen and (max-width: 425px) {
+    .meal .recipe-header .recipe-btn .get-recipe {
+        margin-right: 0;
+    }
+    .recipe-info .recipe-img img {
+        width: 250px;
+        height: 250px;
+        border-radius: 5px;
     }
 }
