--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
   padding: 0;
 }
 
-.meal .recipe-header .recipe-btn .get-recipe {
+.get-recipe {
   background: #ffb800;
   border-radius: 4px;
   color: #fff;
@@ -16,7 +16,7 @@
   cursor: pointer;
 }
 
-.meal .recipe-header .recipe-title, .recipe-desc .desc-title {
+.recipe-title, .desc-title {
   font-weight: bold;
   font-size: 30px;
   line-height: 45px;
@@ -58,17 +58,17 @@ body .wrapper {
   padding: 30px 0;
 }
 
-.first-line .title {
+.title {
   font-family: "Luckiest Guy", cursive;
   font-size: 24px;
   text-transform: uppercase;
 }
 
-.first-line .title a {
+.title a {
   color: #333333;
 }
 
-.first-line .search-button {
+.search-button {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -78,7 +78,7 @@ body .wrapper {
   width: 50%;
 }
 
-.first-line .search-button input {
+.search-button input {
   background-color: #f8f8f8;
   border: none;
   width: 100%;
@@ -87,7 +87,7 @@ body .wrapper {
   color: #333333;
 }
 
-.first-line .search-button button {
+.search-button button {
   min-width: 80px;
   background: #ffb800;
   border: none;
@@ -99,7 +99,7 @@ body .wrapper {
   height: 80px;
 }
 
-.menu .menu-link {
+.menu-link {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -109,19 +109,19 @@ body .wrapper {
   padding-top: 25px;
 }
 
-.menu .menu-link a {
+.menu-link a {
   color: #fff;
 }
 
-.menu .menu-link a:hover {
+.menu-link a:hover {
   color: #ffb800;
 }
 
-.menu .menu-link .active {
+.menu-link .active {
   color: #ffb800;
 }
 
-.menu .menu-link li {
+.menu-link li {
   font-weight: bold;
   font-size: 15px;
   line-height: 25px;
@@ -147,7 +147,7 @@ body .wrapper {
       align-self: center;
 }
 
-.header-burger .burger-line {
+.burger-line {
   display: block;
   position: absolute;
   width: 100%;
@@ -156,17 +156,17 @@ body .wrapper {
   left: 0;
 }
 
-.header-burger .burger-line_first {
+.burger-line_first {
   top: 0;
 }
 
-.header-burger .burger-line_second {
+.burger-line_second {
   top: 50%;
   -webkit-transform: translateY(-50%);
           transform: translateY(-50%);
 }
 
-.header-burger .burger-line_third {
+.burger-line_third {
   bottom: 0;
 }
 
@@ -194,7 +194,7 @@ body .wrapper {
   transition: 0.2s;
 }
 
-.burger-slide-wrapp .burger-nav {
+.burger-nav {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -207,11 +207,11 @@ body .wrapper {
   padding: 50px 30px 0 0;
 }
 
-.burger-slide-wrapp .burger-nav img {
+.burger-nav img {
   margin-bottom: 30px;
 }
 
-.burger-slide-wrapp .burger-menu-link {
+.burger-menu-link {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -222,17 +222,17 @@ body .wrapper {
   list-style: none;
 }
 
-.burger-slide-wrapp .burger-menu-link a {
+.burger-menu-link a {
   color: #fff;
   font-size: 30px;
   text-transform: uppercase;
 }
 
-.burger-slide-wrapp .burger-menu-link a:hover {
+.burger-menu-link a:hover {
   color: #ffb800;
 }
 
-.burger-slide-wrapp .burger-menu-link li {
+.burger-menu-link li {
   margin-bottom: 10px;
 }
 
@@ -255,21 +255,21 @@ body .wrapper {
   overflow-y: auto;
 }
 
-.like-wrapper .close-btn,
-.like-wrapper .delete {
+.close-btn,
+.delete {
   background: none;
   border: none;
   width: 15px;
   height: 15px;
 }
 
-.like-wrapper .fav-img img {
+.fav-img img {
   width: 50px;
   height: 50px;
   margin: 5px;
 }
 
-.like-wrapper .fav-name {
+.fav-name {
   font-size: 20px;
 }
 
@@ -303,7 +303,7 @@ body .wrapper {
   z-index: 99;
 }
 
-.meal .recipe-header {
+.recipe-header {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -316,12 +316,12 @@ body .wrapper {
           align-items: center;
 }
 
-.meal .recipe-header .recipe-title {
+.recipe-title {
   margin: 30px 0;
   text-align: center;
 }
 
-.meal .recipe-header .recipe-btn {
+.recipe-btn {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -334,13 +334,13 @@ body .wrapper {
   margin-bottom: 40px;
 }
 
-.meal .recipe-header .recipe-btn .get-recipe {
+.get-recipe {
   width: 270px;
   height: 60px;
   margin-right: 50px;
 }
 
-.meal .recipe-header .recipe-btn .star {
+.star {
   width: 50px;
   height: 50px;
   background: none;
@@ -355,11 +355,11 @@ body .wrapper {
   margin-top: 30px;
 }
 
-.recipe-info .recipe-img {
+.recipe-img {
   margin: 0 110px 30px 0;
 }
 
-.recipe-info .recipe-img img {
+.recipe-img img {
   width: 400px;
   height: 400px;
   border-radius: 5px;
@@ -383,11 +383,11 @@ body .wrapper {
   margin-top: 45px;
 }
 
-.recipe-desc .desc-title {
+.desc-title {
   margin-bottom: 30px;
 }
 
-.recipe-desc .desc {
+.desc {
   font-size: 20px;
   line-height: 35px;
   margin-bottom: 47px;
@@ -401,7 +401,7 @@ body .wrapper {
         -ms-flex-pack: center;
             justify-content: center;
   }
-  .recipe-info .recipe-img {
+  .recipe-img {
     margin: 0 0 30px 0;
   }
   .recipe-structure {
@@ -433,7 +433,7 @@ body .wrapper {
   .recipe-structure h2 {
     font-size: 30px;
   }
-  .recipe-desc .desc-title {
+  .desc-title {
     font-size: 25px;
     margin-bottom: 5px;
   }
@@ -448,10 +448,10 @@ body .wrapper {
 }
 
 @media screen and (max-width: 425px) {
-  .meal .recipe-header .recipe-btn .get-recipe {
+  .get-recipe {
     margin-right: 0;
   }
-  .recipe-info .recipe-img img {
+  .recipe-img img {
     width: 250px;
     height: 250px;
     border-radius: 5px;
